--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   "dependencies": {
     "bootstrap": "^5.2.0",
     "gray-matter": "^4.0.3",
+    "highlight.js": "^11.6.0",
     "next": "12.2.5",
     "react": "18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "18.2.0",
     "remark": "^14.0.2",
+    "remark-html": "^15.0.1",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
